--- a/config/west.yml
+++ b/config/west.yml
@@ -4,11 +4,17 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: Good-Great-Grand-Wonderful
+      url-base: https://github.com/Good-Great-Grand-Wonderful
+    - name: lanyagagaga-droid
+      url-base: https://github.com/lanyagagaga-droid
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+    - name: gggw-zmk-keebs
+      remote: lanyagagaga-droid
+      revision: main
+      import: config/west.yml
   self:
     path: config
