modified:   trackball_firmware/qmk/keyboards/ploopyco/trackball_nano/rules.mk

--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,6 @@
 ---
 # GitHub workflow build matrix; add entries if you need more firmware targets.
 include:
-  - board: crosses
+  - board: nice_nano_v2
+    shield: gggw_crosses_54
     artifact-name: crosses-bt
