--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,10 @@
 ---
-# GitHub workflow build matrix; add entries if you need more firmware targets.
 include:
   - board: nice_nano_v2
-    shield: gggw_crosses_54
-    artifact-name: crosses-bt
+    shield: crosses_left
+    artifact-name: crosses_54_left
+  - board: nice_nano_v2
+    shield: crosses_right
+    artifact-name: crosses_54_right
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
