--- a/config/west.yml
+++ b/config/west.yml
@@ -8,8 +8,8 @@ manifest:
       url-base: https://github.com/Good-Great-Grand-Wonderful
     - name: lanyagagaga-droid
       url-base: https://github.com/lanyagagaga-droid
-    - name: badjeff
-      url-base: https://github.com/badjeff
+    - name: inorichi
+      url-base: https://github.com/inorichi
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -19,7 +19,7 @@ manifest:
       revision: main
       import: config/west.yml
     - name: zmk-pmw3610-driver
-      remote: badjeff
+      remote: inorichi
       revision: main
   self:
     path: config
